edit petitionpage; add petition-vax img

--- a/petition.html
+++ b/petition.html
@@ -30,7 +30,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Snipp.</a>
+        <a class="navbar-brand" href="index.html">VaXine</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="oi oi-menu"></span> Menu
         </button>
@@ -68,6 +68,55 @@
         </div>
       </div>
     </div>
+
+    <section class="ftco-section">
+      <div class="container">
+        <div class="row no-gutters justify-content-center mb-5 pb-5">
+          <div class="col-md-7 text-center heading-section ftco-animate">
+            <span class="subheading">Give Your Support Today</span>
+            <h2 class="mb-4">Educate NYC, End Vaccine Misinformation</h2>
+            <p>How much do you really know about the effects of vaccines? In an effort to promote informed decisions about vaccinations we have created a petition.</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
+            <a href="portfolio.html" class="image" style="background-image: url('images/petition-vax.jpg'); " data-scrollax=" properties: { translateY: '-20%'}">
+            </a>
+            <div class="text">
+              <h4 class="subheading">Sign Our Petition</h4>
+              <h2 class="heading"><a href="portfolio.html">Educate NYC, End Vaccine Misinformation</a></h2>
+              <p>Sign our petition today and help spread awareness across New York City schools. We hope to get the green light from the New York City Department of Education and bring all necessary information and resources to the classroom. By having a deeper understanding of the human body, immune system, benefits of vaccines, vaccine preventable diseases, and more we can secure trust in vaccines.</p>
+              <p><a href="https://www.change.org/" class="btn btn-primary px-4">View Petition</a></p>
+              <p>Are you a first time user? Click Help for instructions on how to sign your first petition.</p>
+              <p><a href="https://help.change.org/s/article/How-to-sign-a-petition?language=en_US" class="btn btn-primary px-4">Help</a></p>
+            </div>
+          </div>
+          <!--<div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">-->
+          <!--  <a href="portfolio.html" class="image image-2 order-2" style="background-image: url('images/work-2.jpg');" data-scrollax=" properties: { translateY: '-20%'}"></a>-->
+          <!--  <div class="text order-1">-->
+          <!--    <h4 class="subheading">Application</h4>-->
+          <!--    <h2 class="heading"><a href="portfolio.html">Even the all-powerful Pointing has no control</a></h2>-->
+          <!--    <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>-->
+          <!--    <p><a href="portfolio.html" class="btn btn-primary px-4">View Portfolio</a></p>-->
+          <!--  </div>-->
+          <!--</div>-->
+          <!--<div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">-->
+          <!--  <a href="portfolio.html" class="image" style="background-image: url('images/work-3.jpg'); " data-scrollax=" properties: { translateY: '-20%'}"></a>-->
+          <!--  <div class="text">-->
+          <!--    <h4 class="subheading">Web Design</h4>-->
+          <!--    <h2 class="heading"><a href="portfolio.html">Even the all-powerful Pointing has no control</a></h2>-->
+          <!--    <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>-->
+          <!--    <p><a href="portfolio.html" class="btn btn-primary px-4">View Portfolio</a></p>-->
+          <!--  </div>-->
+          <!--</div>-->
+        </div>
+        <!--<div class="row">-->
+        <!--  <div class="col-md-12 text-center">-->
+        <!--    <span><a href="#" class="btn btn-primary py-3 px-5">View All Projects</a></span>-->
+        <!--  </div>-->
+        <!--</div>-->
+      </div>
+    </section>
 
     <section class="ftco-section bg-light">
       <div class="container">
