--- a/resources.html
+++ b/resources.html
@@ -48,8 +48,8 @@
                 </div>
             </li>
             <li class="nav-item"><a href="petition.html" class="nav-link">Petition</a></li>
-            <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
-            <li class="nav-item cta"><a href="contact.html" class="nav-link"><span>Get in touch</span></a></li>
+            <!--<li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>-->
+            <!--<li class="nav-item cta"><a href="contact.html" class="nav-link"><span>Get in touch</span></a></li>-->
           </ul>
         </div>
       </div>
