--- a/petition.html
+++ b/petition.html
@@ -1,3 +1,4 @@
+<!--petition-vax.jpg from https://upload.wikimedia.org/wikipedia/commons/3/31/Young_girl_about_to_receive_a_vaccine_from_a_medical_professional_%2848545962716%29.jpg-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -118,156 +119,115 @@
       </div>
     </section>
 
-    <section class="ftco-section bg-light">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-4 ftco-animate">
-            <div class="blog-entry">
-              <a href="blog-single.html" class="block-20" style="background-image: url('images/image_1.jpg');">
-              </a>
-              <div class="text p-4 d-block">
-                <div class="meta mb-3">
-                  <div><a href="#">July 12, 2018</a></div>
-                  <div><a href="#">Admin</a></div>
-                  <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div>
-                </div>
-                <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about the blind texts</a></h3>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 ftco-animate">
-            <div class="blog-entry" data-aos-delay="100">
-              <a href="blog-single.html" class="block-20" style="background-image: url('images/image_2.jpg');">
-              </a>
-              <div class="text p-4">
-                <div class="meta mb-3">
-                  <div><a href="#">July 12, 2018</a></div>
-                  <div><a href="#">Admin</a></div>
-                  <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div>
-                </div>
-                <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about the blind texts</a></h3>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 ftco-animate">
-            <div class="blog-entry" data-aos-delay="200">
-              <a href="blog-single.html" class="block-20" style="background-image: url('images/image_3.jpg');">
-              </a>
-              <div class="text p-4">
-                <div class="meta mb-3">
-                  <div><a href="#">July 12, 2018</a></div>
-                  <div><a href="#">Admin</a></div>
-                  <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div>
-                </div>
-                <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about the blind texts</a></h3>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 ftco-animate">
-            <div class="blog-entry">
-              <a href="blog-single.html" class="block-20" style="background-image: url('images/image_4.jpg');">
-              </a>
-              <div class="text p-4 d-block">
-                <div class="meta mb-3">
-                  <div><a href="#">July 12, 2018</a></div>
-                  <div><a href="#">Admin</a></div>
-                  <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div>
-                </div>
-                <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about the blind texts</a></h3>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 ftco-animate">
-            <div class="blog-entry" data-aos-delay="100">
-              <a href="blog-single.html" class="block-20" style="background-image: url('images/image_5.jpg');">
-              </a>
-              <div class="text p-4">
-                <div class="meta mb-3">
-                  <div><a href="#">July 12, 2018</a></div>
-                  <div><a href="#">Admin</a></div>
-                  <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div>
-                </div>
-                <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about the blind texts</a></h3>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 ftco-animate">
-            <div class="blog-entry" data-aos-delay="200">
-              <a href="blog-single.html" class="block-20" style="background-image: url('images/image_6.jpg');">
-              </a>
-              <div class="text p-4">
-                <div class="meta mb-3">
-                  <div><a href="#">July 12, 2018</a></div>
-                  <div><a href="#">Admin</a></div>
-                  <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div>
-                </div>
-                <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about the blind texts</a></h3>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row mt-5">
-          <div class="col text-center">
-            <div class="block-27">
-              <ul>
-                <li><a href="#">&lt;</a></li>
-                <li class="active"><span>1</span></li>
-                <li><a href="#">2</a></li>
-                <li><a href="#">3</a></li>
-                <li><a href="#">4</a></li>
-                <li><a href="#">5</a></li>
-                <li><a href="#">&gt;</a></li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
+    <!--<section class="ftco-section bg-light">-->
+    <!--  <div class="container">-->
+    <!--    <div class="row">-->
+    <!--      <div class="col-md-4 ftco-animate">-->
+    <!--        <div class="blog-entry">-->
+    <!--          <a href="blog-single.html" class="block-20" style="background-image: url('images/image_1.jpg');">-->
+    <!--          </a>-->
+    <!--          <div class="text p-4 d-block">-->
+    <!--            <div class="meta mb-3">-->
+    <!--              <div><a href="#">July 12, 2018</a></div>-->
+    <!--              <div><a href="#">Admin</a></div>-->
+    <!--              <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div>-->
+    <!--            </div>-->
+    <!--            <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about the blind texts</a></h3>-->
+    <!--          </div>-->
+    <!--        </div>-->
+    <!--      </div>-->
+    <!--      <div class="col-md-4 ftco-animate">-->
+    <!--        <div class="blog-entry" data-aos-delay="100">-->
+    <!--          <a href="blog-single.html" class="block-20" style="background-image: url('images/image_2.jpg');">-->
+    <!--          </a>-->
+    <!--          <div class="text p-4">-->
+    <!--            <div class="meta mb-3">-->
+    <!--              <div><a href="#">July 12, 2018</a></div>-->
+    <!--              <div><a href="#">Admin</a></div>-->
+    <!--              <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div>-->
+    <!--            </div>-->
+    <!--            <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about the blind texts</a></h3>-->
+    <!--          </div>-->
+    <!--        </div>-->
+    <!--      </div>-->
+    <!--      <div class="col-md-4 ftco-animate">-->
+    <!--        <div class="blog-entry" data-aos-delay="200">-->
+    <!--          <a href="blog-single.html" class="block-20" style="background-image: url('images/image_3.jpg');">-->
+    <!--          </a>-->
+    <!--          <div class="text p-4">-->
+    <!--            <div class="meta mb-3">-->
+    <!--              <div><a href="#">July 12, 2018</a></div>-->
+    <!--              <div><a href="#">Admin</a></div>-->
+    <!--              <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div>-->
+    <!--            </div>-->
+    <!--            <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about the blind texts</a></h3>-->
+    <!--          </div>-->
+    <!--        </div>-->
+    <!--      </div>-->
+    <!--      <div class="col-md-4 ftco-animate">-->
+    <!--        <div class="blog-entry">-->
+    <!--          <a href="blog-single.html" class="block-20" style="background-image: url('images/image_4.jpg');">-->
+    <!--          </a>-->
+    <!--          <div class="text p-4 d-block">-->
+    <!--            <div class="meta mb-3">-->
+    <!--              <div><a href="#">July 12, 2018</a></div>-->
+    <!--              <div><a href="#">Admin</a></div>-->
+    <!--              <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div>-->
+    <!--            </div>-->
+    <!--            <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about the blind texts</a></h3>-->
+    <!--          </div>-->
+    <!--        </div>-->
+    <!--      </div>-->
+    <!--      <div class="col-md-4 ftco-animate">-->
+    <!--        <div class="blog-entry" data-aos-delay="100">-->
+    <!--          <a href="blog-single.html" class="block-20" style="background-image: url('images/image_5.jpg');">-->
+    <!--          </a>-->
+    <!--          <div class="text p-4">-->
+    <!--            <div class="meta mb-3">-->
+    <!--              <div><a href="#">July 12, 2018</a></div>-->
+    <!--              <div><a href="#">Admin</a></div>-->
+    <!--              <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div>-->
+    <!--            </div>-->
+    <!--            <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about the blind texts</a></h3>-->
+    <!--          </div>-->
+    <!--        </div>-->
+    <!--      </div>-->
+    <!--      <div class="col-md-4 ftco-animate">-->
+    <!--        <div class="blog-entry" data-aos-delay="200">-->
+    <!--          <a href="blog-single.html" class="block-20" style="background-image: url('images/image_6.jpg');">-->
+    <!--          </a>-->
+    <!--          <div class="text p-4">-->
+    <!--            <div class="meta mb-3">-->
+    <!--              <div><a href="#">July 12, 2018</a></div>-->
+    <!--              <div><a href="#">Admin</a></div>-->
+    <!--              <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div>-->
+    <!--            </div>-->
+    <!--            <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about the blind texts</a></h3>-->
+    <!--          </div>-->
+    <!--        </div>-->
+    <!--      </div>-->
+    <!--    </div>-->
+    <!--    <div class="row mt-5">-->
+    <!--      <div class="col text-center">-->
+    <!--        <div class="block-27">-->
+    <!--          <ul>-->
+    <!--            <li><a href="#">&lt;</a></li>-->
+    <!--            <li class="active"><span>1</span></li>-->
+    <!--            <li><a href="#">2</a></li>-->
+    <!--            <li><a href="#">3</a></li>-->
+    <!--            <li><a href="#">4</a></li>-->
+    <!--            <li><a href="#">5</a></li>-->
+    <!--            <li><a href="#">&gt;</a></li>-->
+    <!--          </ul>-->
+    <!--        </div>-->
+    <!--      </div>-->
+    <!--    </div>-->
+    <!--  </div>-->
+    <!--</section>-->
 
 
     <footer class="ftco-footer ftco-bg-dark ftco-section">
       <div class="container">
-        <div class="row mb-5">
-          <div class="col-md">
-            <div class="ftco-footer-widget mb-4">
-              <h2 class="ftco-heading-2">VaXine</h2>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-            </div>
-          </div>
-          <div class="col-md">
-            <div class="ftco-footer-widget mb-4 ml-5">
-              <h2 class="ftco-heading-2">Quick Links</h2>
-              <ul class="list-unstyled">
-                <li><a href="#" class="py-2 d-block">Home</a></li>
-                <li><a href="#" class="py-2 d-block">Petition</a></li>
-                <li><a href="#" class="py-2 d-block">Resources</a></li>
-                <li><a href="#" class="py-2 d-block">Portfolio</a></li>
-                <li><a href="#" class="py-2 d-block">About Us</a></li>
-                <li><a href="#" class="py-2 d-block">Contact</a></li>
-              </ul>
-            </div>
-          </div>
-          <div class="col-md">
-             <div class="ftco-footer-widget mb-4">
-              <h2 class="ftco-heading-2">Contact Information</h2>
-              <ul class="list-unstyled">
-                <li><a href="#" class="py-2 d-block">198 West 21th Street, Suite 721 New York NY 10016</a></li>
-                <li><a href="#" class="py-2 d-block">+ 1235 2355 98</a></li>
-                <li><a href="#" class="py-2 d-block">info@yoursite.com</a></li>
-                <li><a href="#" class="py-2 d-block">email@email.com</a></li>
-              </ul>
-            </div>
-          </div>
-          <div class="col-md">
-            <div class="ftco-footer-widget mb-4">
-              <ul class="ftco-footer-social list-unstyled float-md-left float-lft">
-                <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-                <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-                <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
-              </ul>
-            </div>
-          </div>
-        </div>
         <div class="row">
           <div class="col-md-12 text-center">
 
