--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         <div class="row mt-5 d-flex justify-content-center">
           <div class="col-md-8 text-center heading-section ftco-animate">
             <h2 class="h1">UI/UX, visual, <strong class="px-3">Web designer</strong> with more than 12 years of experience in designing websites and mobile apps.</h2>
-            <p><a href="#" class="btn btn-primary mt-3 py-3 px-5">Get in touch</a></p>
+            <!--<p><a href="#" class="btn btn-primary mt-3 py-3 px-5">Get in touch</a></p>-->
           </div>
         </div>
       </div>
@@ -241,28 +241,28 @@
       </div>
     </section>
 
-    <section class="ftco-section-parallax">
-      <div class="parallax-img d-flex align-items-center">
-        <div class="container">
-          <div class="row d-flex justify-content-center">
-            <div class="col-md-7 text-center heading-section heading-section-white ftco-animate">
-              <h2>Subcribe to our Newsletter</h2>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in</p>
-              <div class="row d-flex justify-content-center mt-5">
-                <div class="col-md-6">
-                  <form action="#" class="subscribe-form">
-                    <div class="form-group">
-                      <span class="icon icon-paper-plane"></span>
-                      <input type="text" class="form-control" placeholder="Enter email address">
-                    </div>
-                  </form>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
+    <!--<section class="ftco-section-parallax">-->
+    <!--  <div class="parallax-img d-flex align-items-center">-->
+    <!--    <div class="container">-->
+    <!--      <div class="row d-flex justify-content-center">-->
+    <!--        <div class="col-md-7 text-center heading-section heading-section-white ftco-animate">-->
+    <!--          <h2>Subcribe to our Newsletter</h2>-->
+    <!--          <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in</p>-->
+    <!--          <div class="row d-flex justify-content-center mt-5">-->
+    <!--            <div class="col-md-6">-->
+    <!--              <form action="#" class="subscribe-form">-->
+    <!--                <div class="form-group">-->
+    <!--                  <span class="icon icon-paper-plane"></span>-->
+    <!--                  <input type="text" class="form-control" placeholder="Enter email address">-->
+    <!--                </div>-->
+    <!--              </form>-->
+    <!--            </div>-->
+    <!--          </div>-->
+    <!--        </div>-->
+    <!--      </div>-->
+    <!--    </div>-->
+    <!--  </div>-->
+    <!--</section>-->
 
     <section class="ftco-section">
       <div class="container">
