fix portfolio nav bar

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Snipp - Free Bootstrap 4 Template by Colorlib</title>
+    <title>VaXine - Statistics2</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -30,7 +30,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Snipp.</a>
+        <a class="navbar-brand" href="index.html">VaXine</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="oi oi-menu"></span> Menu
         </button>
@@ -47,7 +47,7 @@
                   <a class="dropdown-item" href="portfolio-single.html">Portfolio Single</a>
                 </div>
             </li>
-            <li class="nav-item"><a href="blog.html" class="nav-link">Case Studies</a></li>
+            <li class="nav-item"><a href="petition.html" class="nav-link">Petition</a></li>
             <!--<li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>-->
             <!--<li class="nav-item cta"><a href="contact.html" class="nav-link"><span>Get in touch</span></a></li>-->
           </ul>
