comment out contacts in petition

--- a/petition.html
+++ b/petition.html
@@ -87,7 +87,7 @@
               <h4 class="subheading">Sign Our Petition</h4>
               <h2 class="heading"><a href="portfolio.html">Educate NYC, End Vaccine Misinformation</a></h2>
               <p>Sign our petition today and help spread awareness across New York City schools. We hope to get the green light from the New York City Department of Education and bring all necessary information and resources to the classroom. By having a deeper understanding of the human body, immune system, benefits of vaccines, vaccine preventable diseases, and more we can secure trust in vaccines.</p>
-              <p><a href="https://www.change.org/" class="btn btn-primary px-4">View Petition</a></p>
+              <p><a href="http://chng.it/mgXwSbZwJQ" class="btn btn-primary px-4">View Petition</a></p>
               <p>Are you a first time user? Click Help for instructions on how to sign your first petition.</p>
               <p><a href="https://help.change.org/s/article/How-to-sign-a-petition?language=en_US" class="btn btn-primary px-4">Help</a></p>
             </div>
