--- a/about-us.html
+++ b/about-us.html
@@ -40,13 +40,14 @@
           <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
           <li class="nav-item active"><a href="about-us.html" class="nav-link">About Us</a></li>
           <li class="nav-item"><a href="resources.html" class="nav-link">Resources</a></li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="portfolio.html" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Portfolio</a>
-              <div class="dropdown-menu" aria-labelledby="dropdown04">
-                <a class="dropdown-item" href="portfolio.html">Portfolio</a>
-                <a class="dropdown-item" href="portfolio-single.html">Portfolio Single</a>
-              </div>
-          </li>
+          <li class="nav-item"><a href="field-research.html" class="nav-link">Field Research</a></li>
+          <!--<li class="nav-item dropdown">-->
+          <!--  <a class="nav-link dropdown-toggle" href="portfolio.html" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Portfolio</a>-->
+          <!--    <div class="dropdown-menu" aria-labelledby="dropdown04">-->
+          <!--      <a class="dropdown-item" href="portfolio.html">Portfolio</a>-->
+          <!--      <a class="dropdown-item" href="portfolio-single.html">Portfolio Single</a>-->
+          <!--    </div>-->
+          <!--</li>-->
           <li class="nav-item"><a href="petition.html" class="nav-link">Petition</a></li>
           <!--<li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>-->
           <!--<li class="nav-item cta"><a href="contact.html" class="nav-link"><span>Get in touch</span></a></li>-->
@@ -75,7 +76,8 @@
         <div class="container-fluid" data-scrollax-parent="true">
           <div class="row mt-5 d-flex justify-content-center">
             <div class="col-md-8 text-center heading-section ftco-animate">
-              <h2 class="h1">We are high school seniors from Brooklyn, New York City. We have been <strong class="px-3">investigating the importance of getting vaccinated and how opting out of immunizations affects New York City.</strong>We find it important to bring awareness to the subject of vaccination exemptions in order to secure public health. With this website, we hope to educate individuals who are curious about the effects of vaccines and encourage them to make informed decisions about their health.</h2>
+              <h2 class="h1">Who are we?</h2>
+              <p>We are high school seniors from Brooklyn, New York City. We have been <mark>investigating the importance of getting vaccinated and how opting out of immunizations affects New York City.</mark> We find it important to bring awareness to the subject of vaccination exemptions in order to secure public health. With this website, we hope to educate individuals who are curious about the effects of vaccines and encourage them to make informed decisions about their health.</p>
               <!--<p><a href="#" class="btn btn-primary mt-3 py-3 px-5">Get in touch</a></p>-->
             </div>
           </div>
