--- a/index.html
+++ b/index.html
@@ -40,13 +40,14 @@
           <li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
           <li class="nav-item"><a href="about-us.html" class="nav-link">About Us</a></li>
           <li class="nav-item"><a href="resources.html" class="nav-link">Resources</a></li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="portfolio.html" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Portfolio</a>
-              <div class="dropdown-menu" aria-labelledby="dropdown04">
-                <a class="dropdown-item" href="portfolio.html">Portfolio</a>
-                <a class="dropdown-item" href="portfolio-single.html">Portfolio Single</a>
-              </div>
-          </li>
+          <li class="nav-item"><a href="field-research.html" class="nav-link">Field Research</a></li>
+          <!--<li class="nav-item dropdown">-->
+          <!--  <a class="nav-link dropdown-toggle" href="portfolio.html" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Portfolio</a>-->
+          <!--    <div class="dropdown-menu" aria-labelledby="dropdown04">-->
+          <!--      <a class="dropdown-item" href="portfolio.html">Portfolio</a>-->
+          <!--      <a class="dropdown-item" href="portfolio-single.html">Portfolio Single</a>-->
+          <!--    </div>-->
+          <!--</li>-->
           <li class="nav-item"><a href="petition.html" class="nav-link">Petition</a></li>
           <!--<li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>-->
           <!--<li class="nav-item cta"><a href="contact.html" class="nav-link"><span>Get in touch</span></a></li>-->
@@ -181,7 +182,7 @@
         <div class="row mt-5 d-flex justify-content-center">
           <div class="col-md-8 text-center heading-section ftco-animate">
             <h2 class="h1">Quality of Life Issue:  <strong class="px-3">Vaccination Exemptions in NYC</strong></h2>
-            <h4>The spread of misinformation about vaccines is high, and sources such as those can convince others to not vaccinate. Vaccine exemptions are a problem to not just the individual exempting, but also those who interact with the individual that exempted. It is our goal to educate students and parents about vaccinations in order to help them make educated choices concerning their health.</h4>
+            <p>The spread of misinformation about vaccines is high and it can convince others to not get vaccinated. Vaccine exemptions are a problem to not just the individual exempting, but also those who interact with the individual. It is our goal to educate students and parents about vaccinations in order to help them make educated choices concerning their health.</p>
             <!--<p><a href="#" class="btn btn-primary mt-3 py-3 px-5">Get in touch</a></p>-->
           </div>
         </div>
@@ -196,14 +197,14 @@
           <div class="col-md-6 text-center heading-section ftco-animate">
             <!--<span class="subheading">Our Services</span>-->
             <h2 class="mb-4">What are vaccines?</h2>
-            <h4>A vaccine introduces the human body to a dead or weakened version of a bacteria so when it encounters the bacteria again, the immune system knows how to combat it.</h4>
+            <p>A vaccine introduces the human body to a dead or weakened version of a bacteria, so when it encounters the bacteria again the immune system knows how to combat it.</p>
           </div>
         </div>
         <div class="row justify-content-center mb-5 pb-5">
           <div class="col-md-6 text-center heading-section ftco-animate">
             <!--<span class="subheading">Our Services</span>-->
             <h2 class="mb-4">How are they beneficial?</h2>
-            <h4>When people get a vaccine, they are doing themselves afavor by preparing their body for this illness. Additionally, they are doing everyone else a favor by helping decrese the chancess of the said illness to spread. The more people vaccinate, the more it will help those who can not get vaccinated by creating herd immunity.</h4>
+            <p>When people get a vaccine, they prepare their body to defend itself against a disease. Additionally, they are doing everyone else a favor by helping decrease the chances of spreading a disease. The more people vaccinate, the more it will help improve personal and public health.</p>
           </div>
         </div>
         <!--<div class="row">-->
@@ -405,43 +406,6 @@
     <!--    </div>-->
     <!--  </div>-->
     <!--</section>-->
-
-    <section class="ftco-section ftco-counter" id="section-counter">
-      <div class="container">
-        <div class="row justify-content-center mb-5 pb-5">
-          <div class="col-md-7 text-center heading-section heading-section-white ftco-animate">
-            <h2>Our achievements</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in</p>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-6 col-lg-4 d-flex justify-content-center counter-wrap ftco-animate">
-            <div class="block-18 text-center">
-              <div class="text">
-                <strong class="number" data-number="400">0</strong>
-                <span>Customers are satisfied with our professional support</span>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4 d-flex justify-content-center counter-wrap ftco-animate">
-            <div class="block-18 text-center">
-              <div class="text">
-                <strong class="number" data-number="1000">0</strong>
-                <span>Amazing preset options to be mixed and combined</span>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4 d-flex justify-content-center counter-wrap ftco-animate">
-            <div class="block-18 text-center">
-              <div class="text">
-                <strong class="number" data-number="8000">0</strong>
-                <span>Average response time on live chat support channel</span>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
 
     <!--<section class="ftco-section bg-light">-->
     <!--  <div class="container">-->
