--- a/petition.html
+++ b/petition.html
@@ -41,13 +41,14 @@
             <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
             <li class="nav-item"><a href="about-us.html" class="nav-link">About Us</a></li>
             <li class="nav-item"><a href="resources.html" class="nav-link">Resources</a></li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="portfolio.html" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Portfolio</a>
-                <div class="dropdown-menu" aria-labelledby="dropdown04">
-                  <a class="dropdown-item" href="portfolio.html">Portfolio</a>
-                  <a class="dropdown-item" href="portfolio-single.html">Portfolio Single</a>
-                </div>
-            </li>
+            <li class="nav-item"><a href="field-research.html" class="nav-link">Field Research</a></li>
+            <!--<li class="nav-item dropdown">-->
+            <!--  <a class="nav-link dropdown-toggle" href="portfolio.html" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Portfolio</a>-->
+            <!--    <div class="dropdown-menu" aria-labelledby="dropdown04">-->
+            <!--      <a class="dropdown-item" href="portfolio.html">Portfolio</a>-->
+            <!--      <a class="dropdown-item" href="portfolio-single.html">Portfolio Single</a>-->
+            <!--    </div>-->
+            <!--</li>-->
             <li class="nav-item active"><a href="petition.html" class="nav-link">Petition</a></li>
             <!--<li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>-->
             <!--<li class="nav-item cta"><a href="contact.html" class="nav-link"><span>Get in touch</span></a></li>-->
@@ -81,11 +82,11 @@
         </div>
         <div class="row">
           <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-            <a href="portfolio.html" class="image" style="background-image: url('images/petition-vax.jpg'); " data-scrollax=" properties: { translateY: '-20%'}">
+            <a class="image" style="background-image: url('images/petition-vax.jpg'); " data-scrollax=" properties: { translateY: '-20%'}">
             </a>
             <div class="text">
               <h4 class="subheading">Sign Our Petition</h4>
-              <h2 class="heading"><a href="portfolio.html">Educate NYC, End Vaccine Misinformation</a></h2>
+              <h2 class="heading"><a>Educate NYC, End Vaccine Misinformation</a></h2>
               <p>Sign our petition today and help spread awareness across New York City schools. We hope to get the green light from the New York City Department of Education and bring all necessary information and resources to the classroom. By having a deeper understanding of the human body, immune system, benefits of vaccines, vaccine preventable diseases, and more we can secure trust in vaccines.</p>
               <p><a href="http://chng.it/mgXwSbZwJQ" class="btn btn-primary px-4">View Petition</a></p>
               <p>Are you a first time user? Click Help for instructions on how to sign your first petition.</p>
