--- a/resources.html
+++ b/resources.html
@@ -40,13 +40,14 @@
             <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
             <li class="nav-item"><a href="about-us.html" class="nav-link">About Us</a></li>
             <li class="nav-item active"><a href="resources.html" class="nav-link">Resources</a></li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="portfolio.html" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Portfolio</a>
-                <div class="dropdown-menu" aria-labelledby="dropdown04">
-                  <a class="dropdown-item" href="portfolio.html">Portfolio</a>
-                  <a class="dropdown-item" href="portfolio-single.html">Portfolio Single</a>
-                </div>
-            </li>
+            <li class="nav-item"><a href="field-research.html" class="nav-link">Field Research</a></li>
+            <!--<li class="nav-item dropdown">-->
+            <!--  <a class="nav-link dropdown-toggle" href="portfolio.html" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Portfolio</a>-->
+            <!--    <div class="dropdown-menu" aria-labelledby="dropdown04">-->
+            <!--      <a class="dropdown-item" href="portfolio.html">Portfolio</a>-->
+            <!--      <a class="dropdown-item" href="portfolio-single.html">Portfolio Single</a>-->
+            <!--    </div>-->
+            <!--</li>-->
             <li class="nav-item"><a href="petition.html" class="nav-link">Petition</a></li>
             <!--<li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>-->
             <!--<li class="nav-item cta"><a href="contact.html" class="nav-link"><span>Get in touch</span></a></li>-->
