--- a/field-research.html
+++ b/field-research.html
@@ -142,7 +142,8 @@
             <h2>Spreadsheet</h2>
             <p>We recorded our survey data. Feel free to take a peek.</p>
           </div>
-          <center><iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTnWrDQxhy9lzJlG-DWA7eyjqGqpyIvjPINpOpjwBxEdgRh_17gYcdnueAiNvF6k-CMQ9k6RAcRPnS9/pubhtml?widget=true&amp;headers=false" width="500" height="500"></iframe></center>
+          <center class="col-sm-12"><iframe class="embed-responsive" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTnWrDQxhy9lzJlG-DWA7eyjqGqpyIvjPINpOpjwBxEdgRh_17gYcdnueAiNvF6k-CMQ9k6RAcRPnS9/pubhtml?widget=true&amp;headers=false" height="500"></iframe></center>
+          <!-- width="400" height="500"-->
         </div>
       </div>
     </section>
