--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
           <div class="col-md-6 text-center heading-section ftco-animate">
             <!--<span class="subheading">Our Services</span>-->
             <h2 class="mb-4">What are vaccines?</h2>
-            <p>A vaccine introduces the human body to a dead or weakened version of a bacteria, so when it encounters the bacteria again the immune system knows how to combat it.</p>
+            <p>A vaccine introduces the human body to a dead or weakened version of a virus, so when it encounters the virus again the immune system knows how to combat it.</p>
           </div>
         </div>
         <div class="row justify-content-center mb-5 pb-5">
